--- a/notes/os/虚拟机.md
+++ b/notes/os/虚拟机.md
@@ -1,6 +1,42 @@
-## 宿主机可以ping虚拟机但虚拟机不能ping宿主机（2020.04.27）
+
+
+* [虚拟机无法联网(200427)](#虚拟机无法联网(200427))
+* [宿主机可以ping虚拟机但虚拟机不能ping宿主机（200427）](#宿主机可以ping虚拟机但虚拟机不能ping宿主机（200427）)
+* [虚拟机的三种网络方式](#虚拟机的三种网络方式)
+    * 桥接模式
+    * Host-only模式
+    * NAT模式
+* [外网ip访问虚拟机](#外网ip访问虚拟机)
+
+
+# 虚拟机无法联网(200427)
+虚拟机的网卡需要设置为桥接模式，并且配置虚拟机的IP信息。/etc/sysconfig/network-scripts/cfg-**
+
+
+# 宿主机可以ping虚拟机但虚拟机不能ping宿主机（200427）
 宿主机防火墙配置原因，Windows防火墙没有打开ICMPv4-in规则
 Windows防火墙->高级设置->入站规则->文件和打印机共享（回显请求ICMPv4-in）专用-公用->启用规则
 
-## 虚拟机无法联网
-虚拟机的网卡需要设置为桥接模式
+
+# 虚拟机的三种网络方式
+## 桥接模式
+该模式下，虚拟机相当于局域网内的一台独立的主机，它可以访问局域网内的任意一台机器。桥接模式下，需要手动为虚拟机配置IP地址、子网掩码，并且要和宿主机处于同一网段。`也可以通过配置TCP/IP信息，实现通过局域网的网关或路由器访问互联网`
+## Host-only模式
+该模式下，虚拟机唯一能访问的就是主机，也不能访问外部网络。虚拟系统的TCP/IP配置信息都是由`VMnet1`虚拟网络的DHCP服务器动态分配的
+## NAT模式
+该模式下，虚拟系统可以借助NAT功能，通过宿主机所在的网络来访问公网(`外面的电脑不能直接访问虚拟机`)。虚拟系统的TCP/IP配置信息由`VMnet8`虚拟网络的DHCP服务器提供的，无法进行手工修改，因此`虚拟机无法和本局域网种的其他真实主机进行通讯`
+## 其他
+NAT模式的VMnet8虚拟网络，host-only模式的VMnet1虚拟网络，bridge模式的VMnet0虚拟网络均是虚拟机自动配置生成的。VMnet8和VMnet1提供DHCP服务，VMnet0不提供。
+
+# 外网ip访问虚拟机
+> 摘抄自https://blog.csdn.net/jiandanokok/article/details/51387822(图文，易于理解)
+## 1.本机ip访问虚拟机
+通过虚拟机的NAT模式端口映射实现
+* 添加或设置虚拟机的网卡为NAT模式 
+* 设置NAT网卡的端口映射
+* 测试 ssh root@localhost -p 2222
+## 2.外网ip访问虚拟机
+通过配置路由器的虚拟服务器端口映射实现
+* 登录`tplogin.cn`
+* 在虚拟服务器中设置端口映射
+* 测试 ssh root@外网ip -p 10080
