分布式计算第二章

--- a/notes/py/数据库连接.md
+++ b/notes/py/数据库连接.md
@@ -63,7 +63,7 @@ except pymysql.Error:
     print("Mysql Error")
 ```
 运行python文件后，可以得到一个json文件(都是字符形式的)
-```json
+```none
 {
     "data": [
         {
