--- a/notes/class/分布式计算/课件.md
+++ b/notes/class/分布式计算/课件.md
@@ -1124,20 +1124,373 @@ private:
 
 一种简单的解决方案是：IBoat不从IVehicle派生, 把GetMaxSpeed换成GetMasBoatSpeed, IPlane也不从IVehicle派生, 把GetMaxSpeed换成GetMaxPlaneSpeed. 换个名字而已
 ### 2.2临时的方案
-针对
+针对IBoat，设计一个中间类
+```c++
+struct IXBoat:public IBoat
+{
+    virtual HRESULT GetMaxBoatSpeed(long *pV)=0; //新增加一个纯虚函数. 此函数在COM对象中实现
+    HRESULT GetMaxSpeed(long *pV){
+        return GetMaxBoatSpeed(pV);
+    }//实现了接口IBoat的GetMaxSpeed,但是,只转交给另一个函数GetMaxBoatSpeed. COM对象不再改写此函数.
+}
+```
+针对IPlane, 也作类似的处理,设计一个中间类IXPlane,增加一个纯虚函数GetMaxPlaneSpeed,并把其GetMaxSpeed转交给新函数处理
+
+COM对象类
+```c++
+class BoatPlane:public IXBoat, public IXPlane
+{
+public:
+    //IUnknown的方法:
+    QueryInterface,AddRef,Release
+    ……
+    //IBoat的方法:
+    HRESULT swim(void);
+    //IPlane的方法:
+    HRESULT fly(void);
+    //IXBoat的方法:
+    HRESULT GetMaxBoatSpeed(long *pV){ *pV=50;}
+    //IXPlane的方法:
+     HRESULT GetMaxPlaneSpeed(long *pV) { *pV=800;}
+}//注意没有改写接口类的IBoat和IPlane的GetMaxSpeed.  只改写了中间类的两个函数
+```
+COM对象的内存结构如下:
+![COM对象的内存结构](../../../imgs/分布式计算课件-六-2-2-1.png)
+
+* IBoat->GetMaxSpeed(*pV)将在内部调用GetMaxBoatSpeed,返回50
+* IPlane->GetMaxSpeed(*pV)将在内部调用GetMaxPlaneSpeed,返回800
+
+以上方案相当不错.注意,BoatPlane类没有改写接口类的GetMaxSpeed方法.实际上,一旦改写了,那么,费尽心机所加的中间类,以及中间函数都将失效. 客户使用IBoat接口或IPlane接口调用GetMaxSpeed时将调用BoatPlane的实现.所有的努力白费
+
 ## 3.使用复合技术（嵌套类）实现接口
 ### 3.1COM主对象和COM子对象
+COM规定了接口的结构,但是并没有规定其实现方法. 复合方式是使用C++语言实现COM接口的另一种方法. 使用复合技术可以很好地解决名字冲突问题. 方法是: 把发生名字冲突的接口以不同的C++的类实现,让COM对象类复合(即内嵌)这些类的实例. 为了让这些被内嵌(复合)进来的数据成员在客户的眼里(通过接口指针)看起来是一个对象, 通常我们在COM对象中做一个QueryInterface的主实现(master implementation), 其他数据成员的QueryInterface都委托给这个主实现
+
+COM对象类的定义：
+```c++
+class BoatPlane
+{
+public:
+    BoatPlane(void): m_Ref(0){}
+    HRESULT _stdcall QueryInterface(REFIID iid,void **ppv);
+    ULONG _stdcall AddRef();//这三个函数不必是虚函数
+    ULONG _stdcall Release();
+    //嵌套类从接口类派生
+    struct XBoat:public IBoat{ 
+        inline BoatPlane *This();//函数返回指向父类的指针
+        HRESULT _stdcall QueryInterface(REFIID iid,void **ppv);
+        ULONG _stdcall AddRef();//这几个是继承自IUnknown,虚的.
+        ULONG _stdcall Release();
+        HRESULT _stdcall Swim();//具体的功能
+        HRESULT _stdcall GetMaxSpeed(long *pV);
+    }m_xBoat;//嵌套类数据成员1, 实现了IBoat接口.在使用继承的方式时,它就是COM对象.但这里,它作为主对象的一个成员.不妨称之为COM子对象,相应地BoatPlane的实例称为COM主对象.
+
+    //嵌套类从接口类派生
+    struct XPlane:public IPlane{ 
+        inline BoatPlane *This() //函数返回指向父类的指针
+        HRESULT _stdcall QueryInterface(REFIID iid,void **ppv);
+        ULONG _stdcall AddRef();
+        ULONG _stdcall Release();
+        HRESULT _stdcall Fly();
+        HRESULT _stdcall GetMaxSpeed(long *pV);
+    }m_xPlane;//嵌套类数据成员2 实现了IPlane接口,另一个COM子对象
+    int	m_Ref ;// 用作引用计数
+    char * m_pTonsOfMemForBoat;  //为实现Boat功能而需要的数据
+    …//其他数据成员
+}
+```
+子对象只使用了单继承. 同一主对象的不同子对象都使用单继承的方式
 ### 3.2COM 主对象的实现
+```c++
+HRESULT BoatPlane::QueryInterface(const IID& iid, void **ppv)
+{
+    if(iid == IID_IUnknown) *ppv=static_cast<IUnknown*>(&m_xBoat);//对COM子对象进行转换后传出
+    else if(iid == IID_IVehicle) *ppv=static_cast<IVehicle*>(&m_xBoat) ;
+    else if(iid == IID_IBoat) *ppv=static_cast<IBoat*>(&m_xBoat) ;
+    else if(iid == IID_IPlane) *ppv=static_cast<IPlane*>(&m_xPlane) ;
+    else{
+        *ppv=0;
+        return E_NOINTERFACE;
+    }
+    ((IUnknown*)(*ppv))->AddRef();//注意只有在对IUnknown是单继承的情况下才能使用(IUnknown*)进行转换.否则编译出错.如果使用了多继承,要转换为相应的具体的接口.
+    return S_OK;
+}
+```
+BoatPlane 对QueryInterface的处理,并不是把指向自己的指针this进行static_cast转换, 而是对自己的成员变量即COM子对象进行static_cast转换.再传出去
+
+```c++
+ULONG CDictionary::AddRef()
+{
+    m_Ref ++;//跟使用继承的方式实现接口时的引用计数方法完全一致
+	return (ULONG) m_Ref;
+}
+ULONG CDictionary::Release()
+{
+    m_Ref --;
+	if(m_Ref == 0){
+		delete this;
+		return 0;
+    }
+	return (ULONG) m_Ref;
+}
+```
 ### 3.3COM 子对象的实现
+为了维护对象的实体身份,(在这里为了实现IBoat和IPlane接口,我们使用了三个类, 其中两个派生自接口类,然后作为第三个的内嵌的数据成员) 我们不能让客户有所察觉,即"透明"地实现接口。因此这里我们把COM子对象对IUnknown定义的函数的实现委托给COM主对象来完成。
+
+因此有必要在COM子对象中访问COM主对象的成员。它们的This内联函数就是这个目的
+```c++
+inline BoatPlane* BoatPlane::XBoat::This(void)
+{
+    return (BoatPlane*)(this-offsetof(BoatPlane,m_xBoat));
+}//其中#define offsetof(s,m) (size_t)&(((s *)0)->m) 结构s正好落在地址0时其成员m的绝对地址.
+
+//This函数把this指针减去类分量在类中的偏移得到父类指针.
+HRESULT BoatPlane::XBoat::QueryInterface(REFIID iid,void **ppv)
+{
+    return This()->QueryInterface(iid,ppv);
+}//通过父类指针调用父类的实现
+ULONG BoatPlane::XBoat::AddRef()
+{
+    return This()->AddRef();
+}//通过父类指针调用父类的实现
+ULONG BoatPlane::XBoat::Release()
+{
+    return This()->Release();
+}//通过父类指针调用父类的实现
+//对于XPlane也采用类似的方法.  
+```
 ### 3.4基于复合技术的COM对象的内存结构
+![基于复合技术的COM对象的内存结构](../../../imgs/分布式计算课件-六-3-4-1.png)
+
 ## 4.针对接口的引用计数
 ### 4.1需求
+在此之前,我们所谓的引用计数都是针对对象的. 一个对象的所有接口都对同一个计数变量进行操作.对象无法区分是哪个接口对其进行操作的.而且,实际上,通常我们也不必区分它.
+
+但是,存在这样的情况, 我们的COM对象越来越复杂,功能越来越多.(想一想我们的手机) COM对象为实现不同的接口准备了完全不同的资源,如果暂时不使用其中的某个接口的话,我们完全可以对其所需要的资源暂时不予分配.而把分配工作放到必要时进行,而且,也要及时地释放
+
+仍然考虑水上飞机,在BoatPlane类中我们定义了一个成员变量:
+char * m_pTonsOfMemForBoat; 这个成员变量只在在swim函数中要使用.也就是说,只有IBoat指针会使用它.而与IPlane指针无关
+
+假设m_pTonsOfMemForBoat需要分配一个很大的内存空间.我们当然希望只在必要的时候分配.然而,如果使用多重继承的方式实现COM接口,那么意味者所有的虚表中的AddRef和Release项都只指向同一个实现.也即我们无法从引用计数中区分出IBoat接口来.当然,对于分配过程我们还是有点办法:
+```c++
+HRESULT BoatPlane ::QueryInterface(REFIID iid,void **ppv)
+{
+    if(iid=IID_Boat){
+        if(m_pTonsOfMemForBoat==NULL)
+            m_pTonsOfMemForBoat=new char[1024*1024*10];//任务只完成了一半, 10M的内存只在最需要的时候分配.
+            *ppv=static_cast<IBoat*>(&m_xBoat);
+        }
+    else if ……
+}  
+```
+但是,我们无法知道什么时候释放掉.因为我们不能鉴别IBoat和IPlane所发出的Release调用
 ### 4.2实现方法
+我们使用复合技术来实现针对接口的引用计数. COM 子对象XBoat的引用计数不再简单地委托给COM主对象实现
+
+在上一节的BoatPlane定义中增加一个成员变量int m_BoatRef; 在BoatPlane的构造函数中被赋值0. XBoat的AddRef和Release函数变为
+```c++
+ULONG BoatPlane::XBoat::AddRef()
+{
+    ULONG res=InterLockedIncrement(&m_BoatRef);
+    if(res==1){
+        This ->m_pTonsOfMemForBoat=new char[1024*1024*10];//只在必须分配内存的时候才分配
+        This->AddRef();
+    }//只在第一次调用一次主对象的AddRef,在主对象中备案.
+    return res;
+}
+
+ULONG BoatPlane::XBoat::Release()
+{
+    ULONG res=InterLockedDecrement(&m_BoatRef);
+    if(res==0){
+       delete []This ->m_pTonsOfMemForBoat;//及时地释放内存. IPlane接口并不需要它. 打电话时关掉摄像头!
+        This->Release();
+    }//最后一次调用一次主对象的Release;通知主对象, 不必为此子对象而保持引用了
+    return res;
+}
+```
+新旧指针指向同一个COM对象的接口, 它们有可能指的同一个对象.(在多重继承的情况下,同一个主对象),也有可能指的不同的对象(在复合技术下,不同的子对象). 在前者无论使用谁调用AddRef都是一样的,在后者则有可能不同.为了一致起见,应遵循COM规范,使用新指针
+
 ## 5.多重继承与复合的结合
+* 使用继承的方式实现IPlane接口,
+* 使用复合的方式实现IBoat接口(IBoat有特殊的引用计数要求)
+
+```c++
+//COM对象定义如下
+class BoatPlane:public IPlane//IPlane接口通过继承的方式实现
+{
+public:
+    BoatPlane(void):m_Ref(0){}
+    HRESULT _stdcall QueryInterface(REFIID iid,void **ppv);
+    ULONG _stdcall AddRef();//这三个函数通过IPlane从IUnknown继承而来
+    ULONG _stdcall Release();//这里改写虚函数,而不像前一节,是单纯的函数 
+    HRESULT _stdcall Fly();//IPlane的函数
+    HRESULT _stdcall GetMaxSpeed(long *pV);//IVehicle的函数
+
+    struct XBoat:public IBoat{ 
+        inline BoatPlane *This();//函数返回指向父类的指针
+        HRESULT _stdcall QueryInterface(REFIID iid,void **ppv);
+        ULONG _stdcall AddRef();
+        ULONG _stdcall Release();
+        HRESULT _stdcall Swim();
+        HRESULT _stdcall GetMaxSpeed(long *pV); //COM子对象的实现可以与主对象的实现不一致. 通过IBoat接口和IPlane接口能得到不同的结果.
+    }m_xBoat;//嵌套类数据成员,COM子对象 实现了IBoat接口.
+    int	m_Ref;//用作主对象的引用计数
+    int m_BoatRef;//用作COM子对象 IBoat接口的引用计数
+    char * m_pTonsOfMemForBoat;  …//其他数据成员.
+}
+
+//主对象的QueryInterface函数
+HRESULT BoatPlane::QueryInterface(const IID& iid, void **ppv)
+{
+    if(iid == IID_IUnknown) *ppv=static_cast<IUnknown*>(this)//也可以是*ppv=static_cast<IUnknown*>(&m_xBoat); 
+    else if(iid == IID_IVehicle) *ppv=static_cast<IVehicle*>(this)//也可以是*ppv=static_cast<IVehicle*>(&m_xBoat) ; 
+    else if(iid == IID_IBoat) *ppv=static_cast<IBoat*>(&m_xBoat) ;//把COM子对象传出
+    else if(iid == IID_IPlane) *ppv=static_cast<IPlane*>(this);//把COM主对象传出
+    else{
+        *ppv=0;
+        return E_NOINTERFACE;
+    }
+    ((IUnknown*)(*ppv))->AddRef();//增加引用计数
+    return S_OK;
+}
+```
+IPlane接口调用QueryInterface当然是上述函数,而IBoat的QueryInterface也应该委托给它. 其他的函数的实现方式都与以前一样
 ## 6.动态复合接口
+事实上,除了使用单独的引用计数外,复合接口还可以进一步优化.一个COM子对象直到客户请求它的复合接口的时候才真正创建,可以进一步优化资源. 在特定的场合下有其重要的用途.这样的接口称为动态复合接口,也称为tearoff接口
+```c++
+class BoatPlane:public IPlane//IPlane接口通过继承的方式实现
+{
+public:
+    BoatPlane(void):m_Ref(0){}
+    HRESULT _stdcall QueryInterface(REFIID iid,void **ppv);
+    ULONG _stdcall AddRef();   ULONG _stdcall Release(); 
+    HRESULT _stdcall Fly();//IVehicle的函数
+    HRESULT _stdcall GetMaxSpeed(long *pV);
+    int	m_Ref;//用作主对象的引用计数
+    char * m_pTonsOfMemForBoat;
+    …//其他数据成员
+    IBoat * m_pBoat;//指针用来保存动态创建的接口
+
+    struct XBoat:public:IBoat   {//嵌套类实现了IBoat接口
+        XBoat(BoatPlane *pThis);//构造函数
+        int m_BoatRef;//自己负责自己的计数
+        BoatPlane *m_pThis;//指向父类的指针
+        inline BoatPlane *This(){
+            return m_pThis;
+        }//返回指向父类的指针
+        HRESULT _stdcall QueryInterface(REFIID iid,void **ppv);
+        ULONG _stdcall AddRef();
+        ULONG _stdcall Release();
+        HRESULT _stdcall Swim();
+        HRESULT _stdcall GetMaxSpeed(long *pV);
+    }//注意只定义了嵌套类,没有数据成员. 即只有COM子对象的类定义, 而没有COM子对象本身.
+}
+```
+主对象第一次接收到IBoat接口请求时,动态地创建一个新的复合接口. 这个工作当然是在QueryInterface中完成的
+```c++
+HRESULT  BoatPlane::QueryInterface(const IID& iid, void **ppv)
+{
+    if(iid == IID_IBoat){
+        if(m_pBoat==NULL)m_pBoat= new XBoat(this);//动态创建对象,保存在m_pBoat中, 以供下一次查询时使用
+        *ppv= m_pBoat;
+    }
+    else if ……
+}
+```
+XBoat的构造函数
+```c++
+XBoat::XBoat(BoatPlane *pThis)
+:m_BoatRef(0),m_pThis( pThis)//把父类的指针保存下来.
+{
+    m_pThis->AddRef();
+}//对主对象的引用加1. 以保证当COM子对象XBoat存在时,主对象不被删除.
+XBoat::~XBoat (void)
+{
+    m_pThis->Release();
+} //子对象销毁时也通知主对象
+```
+动态复合接口维护自己的引用计数
+```c++
+ULONG BoatPlane::XBoat::AddRef()
+{
+    return =InterLockedIncrement(&m_BoatRef);
+}
+ULONG BoatPlane::XBoat::Release()
+{
+    ULONG res=InterLockedDecrement(&m_BoatRef);
+    if(res==0) delete this;
+    return res;
+}
+```
+它的接口查询函数
+```c++
+HRESULT XBoat::QueryInterface(REFIID iid,void **ppv)
+{
+    if(iid!=IID_Boat) return This()->QueryInterface(iid, ppv)//如果是别的接口,就让主对象去操心
+    *ppv=static_cast<IBoat*>(this);
+    ((IUnknown*)(*ppv))->AddRef();//内部的引用计数
+}  
+```
 ## 7.复合技术的表格驱动
-
-
+定义如下宏
+```c++
+#define COMPOSITE_OFFSET(ClassName,BaseName,MemberType,MemberName)\(DWORD(static_cast<BaseName*>(reinterpret_cast<MemberType*>(0x10000000 + offsetof(ClassName, MemberName)))) - 0x10000000)
+```
+* reinterpret_cast<MemberType*>(0x10000000 + offsetof(ClassName, MemberName))   0x10000000加上父类到嵌套成员的偏移转换为嵌套类
+* (static_cast<BaseName*>(嵌套类指针))把嵌套类指针转换为它的基类指针即接口指针.这里由编译器进行计算偏移. 
+* (DWORD)接口指针- 0x10000000:接口指针的绝对数字减去父类的起始地址0x10000000. 得到父类到嵌套类的基类的偏移.
+```c++
+#define BEGIN_INTERFACE_TABLE(ClassName)
+typedef ClassName _InterfaceTableClassName;
+#define IMPLEMENTS_INTERFACE_WITH_COMPOSITE(RequestedItfName,DataMemberType,DataMemberName)
+{
+    &IID_##RequestedItfName,COMPOSITE_OFFSET(_InterfaceTableClassName,
+    RequestedItfName,
+    DataMemberType,
+    DataMemberName)
+},
+```
+以上宏把复合的接口的偏移表项加入到接口表中去
+```c++
+#define IMPLEMENT_COMPOSITE_UNKNOWN(OuterClassName,InnerClassName,DataMemberName)
+OuterClassName *This(){
+    return (OuterClassName*)((char*)this - offsetof(OuterClassName,DataMemberName));
+}
+STDMETHODIMP QueryInterface(REFIID riid, void **ppv)
+{
+    return This()->QueryInterface(riid, ppv);
+}
+STDMETHODIMP_(ULONG) AddRef(void)
+{
+    return This()->AddRef();
+}
+STDMETHODIMP_(ULONG) Release(void)
+{
+    return This()->Release();\
+}
+```
+以上宏为复合的接口实现IUnknown定义的函数QueryInterface AddRef 和Release
+```c++
+class BoatPlane:public IPlane//IPlane接口通过继承的方式实现
+{
+    public:struct XBoat:public IBoat//IBoat接口使用复合方式实现
+    {
+        IMPLEMENT_COMPOSITE_UNKNOWN(BoatPlane,XBoat,m_xBoat);//复合接口实现IUnknown接口
+        HRESULT _stdcall Swim();
+        HRESULT _stdcall GetMaxSpeed(long *pV);
+    }m_xBoat;//嵌套类数据成员,实现了IBoat接口.
+    IMPLEMENT_UNKNOWN(BoatPlane)//IPlane接口实现IUnknown
+    BEGIN_INTERFACE_TABLE(BoatPlane)
+    IMPLEMENT_INTERFACES(IPlane) IMPLEMENT_INTERFACES_AS(IVehicle,IPlane)//如果请求IVehicle则返回IPlane,当然也可以返回IBoat
+    IMPLEMENTS_INTERFACE_WITH_COMPOSITE(IBoat,XBoat,m_xBoat)//把复合接口加入到接口表中
+    END_INTERFACE_TABLE()
+    HRESULT _stdcall Fly();//IPlane的函数
+    HRESULT _stdcall GetMaxSpeed(long *pV);//IVehicle的函数
+    char * m_pTonsOfMemForBoat;
+}//注意,这里没有实现针对接口的引用技术,如果要实现不能使用IMPLEMENT_COMPOSITE_UNKNOWN宏
+```
+实现水上飞机
 # 七 重用模型
 ## 1.包容
 ### 1.1模型
